# multimod_matching_tree

./: .travis.yml  CMakeLists.txt  README.md  ac_match_tree.h  build_vs.bat  match_tree.h  multimod_matching_tree.h
test/: main.c  makefile  sanguo.txt  sanguo_utf8.txt  test  test.sln  test.vcxproj
tests/: fn_log.h
tests/ac-base/: main.cpp
tests/base/: main.c
